apps/platform/keycloak/keycloak-admin-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-admin
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "sso.apps.int.scarey.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /health
      backendRefs:
        - name: keycloak-service
          port: 9000
